kustomize/cilium-instance/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: cf-issuer
spec:
  addresses:
    - type: IPAddress
      value: 192.168.208.17
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http-gw
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.gw.furst.blue"
      name: https-gw
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''	
            kind: Secret
            name: star-gw-furst-blue-tls
